Fix spacing after episode teaser

--- a/scss/episode.scss
+++ b/scss/episode.scss
@@ -5,10 +5,6 @@
  */
 
 section.main .episode {
-	&.teaser {
-		min-height: 215px;
-	}
-	
 	clear: left;
 	position: relative;
 	margin-bottom: 60px;
@@ -26,6 +22,11 @@ section.main .episode {
 		float: left;
 		margin-right: 15px;
 		margin-bottom: 15px;
+	}
+	
+	&.teaser {
+		min-height: 265px;
+		margin-bottom: 0;
 	}
 	
 	&.float {
